# Opusfocus_Linux

./: README.md  main.py  meson.build  org.opusfocus.app.json  requirements.txt
data/: meson.build  org.opusfocus.app.desktop.in  org.opusfocus.app.gschema.xml  org.opusfocus.app.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  opusfocus1.gresource.xml  opusfocus1.in  window.py  window.ui
